src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Test</fullName>
        <isActive>false</isActive>
        <values>
            <fullName>Archived - Not Interested</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Passive %26 Friendly</fullName>
        </values>
        <values>
            <fullName>Pending - Qualified</fullName>
        </values>
        <values>
            <fullName>Pending - Unqualified</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
        <values>
            <fullName>Working - Talking</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Became_a_Customer_Date__c</fullName>
        <label>Became a Customer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Became_a_Lead_Date__c</fullName>
        <label>Became a Lead Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Became_a_MQL_Date__c</fullName>
        <label>Became a MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Became_a_SQL_date_known__c</fullName>
        <description>Sets to False if there isn&apos;t any SQL date (meaning the Lead never converted to a SQL) and to True if there is an SQL date (meaning the Lead did convert to an SQL)</description>
        <formula>IF( ISBLANK( Became_a_Sales_Qualified_Lead_Date__c ) , False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sets to False if there isn&apos;t any SQL date (meaning the Lead never converted to a SQL) and to True if there is an SQL date (meaning the Lead did convert to an SQL)</inlineHelpText>
        <label>Became a SQL date known</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Became_a_Sales_Qualified_Lead_Date__c</fullName>
        <description>Hubspot field noting when this lead was marked as a Sales Qualified Lead in the Hubspot system.</description>
        <label>Became a Sales Qualified Lead Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Became_a_Subscriber_Date__c</fullName>
        <label>Became a Subscriber Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Became_an_Opportunity_Date__c</fullName>
        <label>Became an Opportunity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Became_working_talking_date__c</fullName>
        <description>Property created by Hubspot workflow. Date at which the SQL becomes Working-Talking</description>
        <inlineHelpText>Property created by Hubspot workflow. Date at which the SQL becomes Working-Talking</inlineHelpText>
        <label>Became working-talking date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Lead_Source_Date_Time__c</fullName>
        <description>The calculated lead source time based on whether the Hubspot record or the SF record was created first.</description>
        <formula>IF (  Hubspot_Create_Date__c   &lt; CreatedDate, 
       Hubspot_Create_Date__c  ,
     CreatedDate
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The calculated lead source time based on whether the Hubspot record or the SF record was created first.</inlineHelpText>
        <label>Calculated Lead Source Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Calculated_Lead_Source__c</fullName>
        <formula>IF(BEGINS (Text(LeadSource),&quot;Outbound&quot;), &apos;Outbound&apos;, 
IF(CONTAINS(Text(LeadSource),&quot;Referred by Dimagi staff&quot;),&apos;Dimagi referral&apos;, 
if(CONTAINS (Text(LeadSource), &quot;Referred by Another Org&quot;),&apos;Inbound - External referral&apos;,
if(CONTAINS (Text(LeadSource), &quot;Referred within same Org&quot;),&apos;Inbound - External referral&apos;, if(BEGINS(Text(LeadSource),&quot;Inbound&quot;), &apos;Inbound&apos;, 
if(CONTAINS (Text(LeadSource), &quot;Drift&quot;), &apos;Inbound&apos;,
IF(OR(Hubspot_Create_Date__c    &lt;  CreatedDate,Hubspot_Create_Date__c    =  CreatedDate),&apos;Inbound&apos;, 
if (Hubspot_Create_Date__c    &gt;  CreatedDate,&apos;Outbound&apos;,
if(ISBLANK(Hubspot_Create_Date__c),&apos;Outbound&apos;,&apos;Other&apos;)))))))))</formula>
        <label>Calculated Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ARDI__c</fullName>
        <label>Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__AR__c</fullName>
        <label>Address Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__AS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ATZ__c</fullName>
        <label>Address Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__AV__c</fullName>
        <label>Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__LES__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lead Email Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommCare_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should this person receive the CommCare Newsletter? If Email Opt Out is checked they won&apos;t receive the newsletter regardless.</inlineHelpText>
        <label>CommCare Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_after_Lead_Conversion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is set automatically by the Lead conversion trigger, do not change it</description>
        <inlineHelpText>This field is set automatically by the Lead conversion trigger, do not change it</inlineHelpText>
        <label>Contact Converted</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converted_to_Opp__c</fullName>
        <description>Returns 1 if Converted to an Opp, returns 0 if not.</description>
        <formula>if(ISPICKVAL(Status, &quot;Converted&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Returns 1 if Converted to an Opp, returns 0 if not.</inlineHelpText>
        <label>Converted to Opp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Counter_Formula__c</fullName>
        <description>This is a simple count formula to be able to summarize unique objects in reports.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Unique Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The country the lead is in</description>
        <inlineHelpText>The country the lead is in.</inlineHelpText>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_entering_SQL_Nudge_workflow__c</fullName>
        <description>The most recent date at which the SQL is enrolled into one of the 3 nudge email workflows: No call, Clicked on Cal -No Call, submitted demo landing page (with no calls scheduled). Gets automatically populated through Hubspot workflow</description>
        <inlineHelpText>The most recent date at which the SQL is enrolled into one of the 3 nudge email workflows: No call, Clicked on Cal -No Call, submitted demo landing page (with no calls scheduled). Gets automatically populated through Hubspot workflow</inlineHelpText>
        <label>Date entering SQL Nudge workflow</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_entering_no_show_reminder_workflow__c</fullName>
        <description>The most recent date at which the SQL got enrolled into the Reminder workflow after no show (it should be equal to date of first no show) - This is populated through a Hubspot workflow</description>
        <inlineHelpText>The most recent date at which the SQL got enrolled into the Reminder workflow after no show (it should be equal to date of first no show) - This is populated through a Hubspot workflow</inlineHelpText>
        <label>Date entering no show reminder workflow</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_1st_Next_activity_date_known__c</fullName>
        <description>First time the &quot;Hubspot-Next activity date&quot; is known, i.e. first time a first call get scheduled through Hubspot CRM. This is automatically populated through a Hubspot workflow</description>
        <inlineHelpText>First time the &quot;Hubspot-Next activity date&quot; is known, i.e. first time a first call get scheduled through Hubspot CRM. This is automatically populated through a Hubspot workflow</inlineHelpText>
        <label>Date of 1st &quot;Next activity date&quot; known</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_First_No_Show__c</fullName>
        <description>The date that this lead first no-showed for a call.</description>
        <inlineHelpText>The date that this lead first no-showed for a call.</inlineHelpText>
        <label>Date of First No-Show</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Became_SQL__c</fullName>
        <formula>today() - DATEVALUE(Became_a_Sales_Qualified_Lead_Date__c)</formula>
        <label>Days Since Became SQL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_w_o_Activity__c</fullName>
        <description>Returns the # of days since last Activity</description>
        <formula>today () -   LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days w/o Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demos_received__c</fullName>
        <description>List of potential areas of CommCare that have been demo&apos;d to the lead.</description>
        <inlineHelpText>List of potential areas of CommCare that have been demo&apos;d to the lead</inlineHelpText>
        <label>Demos received</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CommCare Mobile Application</fullName>
                </value>
                <value>
                    <fullName>CommCare HQ</fullName>
                </value>
                <value>
                    <fullName>CommCare Messaging</fullName>
                </value>
                <value>
                    <fullName>CommCare Supply</fullName>
                </value>
                <value>
                    <fullName>Report Builder</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Earliest_date_conv_to_contact_or_opp__c</fullName>
        <description>This field gets automatically populated through a Hubspot workflow. The first time a contact is converted to the Salesforce Lead status (&quot;Lead Status&quot; in SF) &quot;Converted to an Opp&quot; or &quot;COnverted to a contact/not an opp&quot;</description>
        <inlineHelpText>This field gets automatically populated through a Hubspot workflow. The first time a contact is converted to the Salesforce Lead status (&quot;Lead Status&quot; in SF) &quot;Converted to an Opp&quot; or &quot;COnverted to a contact/not an opp&quot;</inlineHelpText>
        <label>Earliest date conv to contact or opp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earliest_date_of_conversion_to_Arch_N_I__c</fullName>
        <description>Date set by a Hubspot workflow . Corresponds to the first time a contact is converted to the Salesforce Lead status (&quot;Lead Status&quot; in SF) &quot;Archived - Not interested&quot;</description>
        <inlineHelpText>Date set by a Hubspot workflow . Corresponds to the first time a contact is converted to the Salesforce Lead status (&quot;Lead Status&quot; in SF) &quot;Archived - Not interested&quot;</inlineHelpText>
        <label>Earliest date of conversion to Arch. N-I</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earliest_date_of_conversion_to_P_F__c</fullName>
        <description>This field is automatically set by a Hubspot workflow. Corresponds to the first time a contact is converted to the Salesforce Lead status (&quot;Lead Status&quot; in SF) &quot;Passive &amp; Friendly&quot;</description>
        <inlineHelpText>This field is automatically set by a Hubspot workflow. Corresponds to the first time a contact is converted to the Salesforce Lead status (&quot;Lead Status&quot; in SF) &quot;Passive &amp; Friendly&quot;</inlineHelpText>
        <label>Earliest date of conversion to P&amp;F</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Salutation__c</fullName>
        <formula>BLANKVALUE( FirstName ,  TEXT(Salutation) &amp;  &apos; &apos; &amp; LastName  )</formula>
        <label>Email Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Body__c</fullName>
        <inlineHelpText>You can use this field to add a personal message to a Mass Email.  An email template can reference this field. Typically this might be the first personalized paragraph of a generic email. (all fields on this record can be referenced by an email template)</inlineHelpText>
        <label>Email Template Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Template_Subject__c</fullName>
        <inlineHelpText>This is used by the Mass Email functionality. You can reference this field as the subject line of an email template.  (Email templates can reference all fields on this record)</inlineHelpText>
        <label>Email Template Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_is_generic__c</fullName>
        <formula>OR ( CONTAINS( Email , &quot;gmail&quot;),
      CONTAINS( Email , &quot;yahoo&quot;), 
      CONTAINS( Email , &quot;hotmail&quot;), 
      CONTAINS( Email , &quot;ymail&quot;), 
      CONTAINS( Email , &quot;comcast&quot;), 
      CONTAINS( Email , &quot;outlook.com&quot;), 
      CONTAINS( Email , &quot;mail.ru&quot;), 
      CONTAINS( Email , &quot;live.in&quot;), 
      CONTAINS( Email , &quot;live.com&quot;), 
      CONTAINS( Email , &quot;qq.com&quot;) )</formula>
        <label>Email is generic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entered_into_a_Live_Chat_conversation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this contact chatted with a live chat agent? Could be true even if they were already an SQL before talking to us.</description>
        <inlineHelpText>Has this contact chatted with a live chat agent? Could be true even if they were already an SQL before talking to us.</inlineHelpText>
        <label>Entered into a Live Chat conversation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ever_Responded__c</fullName>
        <description>If the lead has ever replied to a communication.</description>
        <formula>if(isblank(Response_Date__c),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the lead has ever replied to a communication.</inlineHelpText>
        <label>Ever Responded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Failed_Qualifying_process_at_least_once__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failed  Qualifying process at least once</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Call_Date__c</fullName>
        <description>Date of the first call with the lead.</description>
        <inlineHelpText>Date of the first call with the lead</inlineHelpText>
        <label>First Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_call_held__c</fullName>
        <formula>if( isblank ( First_Call_Date__c ), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First call held</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Follow_up_Date__c</fullName>
        <description>Use this field to set a specific date that you&apos;d like the follow-up report to remind you to reach back out.</description>
        <inlineHelpText>Use this field to set a specific date that you&apos;d like the follow-up report to remind you to reach back out.</inlineHelpText>
        <label>Follow-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_up_calls_held__c</fullName>
        <description>Calls in addition to the exploratory call.</description>
        <inlineHelpText>Calls in addition to the exploratory call.</inlineHelpText>
        <label>Follow-up calls held</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Became_a_Lead_Date__c</fullName>
        <formula>IF(ISBLANK(ConvertedContactId), Became_a_Lead_Date__c, 
IF(ISBLANK(Contact_after_Lead_Conversion__r.Became_a_Lead_Date__c),
Became_a_Lead_Date__c,
Contact_after_Lead_Conversion__r.Became_a_Lead_Date__c))</formula>
        <label>Group Became a Lead Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Became_a_SQL_Date__c</fullName>
        <formula>IF(ISBLANK(ConvertedContactId), Became_a_Sales_Qualified_Lead_Date__c, 
IF(ISBLANK(Contact_after_Lead_Conversion__r.Became_a_Sales_Qualified_Lead_Date__c),
Became_a_Sales_Qualified_Lead_Date__c,
Contact_after_Lead_Conversion__r.Became_a_Sales_Qualified_Lead_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Became a SQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Became_an_Opp_Date__c</fullName>
        <formula>IF(ISBLANK(ConvertedContactId),  Became_an_Opportunity_Date__c , 
IF(ISBLANK(Contact_after_Lead_Conversion__r.Became_an_Opportunity_Date__c), 
Became_an_Opportunity_Date__c, 
Contact_after_Lead_Conversion__r.Became_an_Opportunity_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Became an Opp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Year_Month_Date_created_in_CCHQ__c</fullName>
        <formula>IF(ISBLANK(ConvertedContactId), Year_and_Month_Date_created_in_CCHQ__c,  Contact_after_Lead_Conversion__r.Year_and_Month_Date_created_in_CCHQ__c)</formula>
        <label>Group Year &amp; Month Date created in CCHQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Ever_Been_No_Show__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is equal to 1 if the lead has ever no-showed for a call. Otherwise 0.</description>
        <inlineHelpText>This field is equal to 1 if the lead has ever no-showed for a call. Otherwise 0.</inlineHelpText>
        <label>Has Ever Been No-Show</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_a_Lead_contacted_us__c</fullName>
        <label>How a Lead contacted us</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emailed us directly (answered email)</fullName>
                </value>
                <value>
                    <fullName>Emailed info@</fullName>
                </value>
                <value>
                    <fullName>Called us directly</fullName>
                </value>
                <value>
                    <fullName>Scheduled a call</fullName>
                </value>
                <value>
                    <fullName>Tried to schedule a call but did not</fullName>
                </value>
                <value>
                    <fullName>Contacted us on social media</fullName>
                </value>
                <value>
                    <fullName>Filled in a contact us form</fullName>
                </value>
                <value>
                    <fullName>Contacted through Live Chat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <inlineHelpText>Used on the Contact Us form on CCHQ</inlineHelpText>
        <label>How did you hear about us?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
                <value>
                    <fullName>Colleague</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Web Search</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_A_B_Variable_Deploy__c</fullName>
        <label>HubSpot - A/B Variable Deploy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Attended_event_Meetup__c</fullName>
        <label>HubSpot - Attended event [Meetup]</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_Attended_event_Webinar__c</fullName>
        <label>HubSpot - Attended event [Webinar]</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_Attended_event_Workshop__c</fullName>
        <label>HubSpot - Attended event [Workshop]</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_Blog_Subscriber__c</fullName>
        <label>HubSpot - Blog Subscriber</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_Confirmed_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HubSpot - Confirmed Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HubSpot_Connected_via_Phone_Phone_Test__c</fullName>
        <description>Did we connect on the phone? Yes or no.</description>
        <inlineHelpText>Did we connect on the phone? Yes or no.</inlineHelpText>
        <label>HubSpot - Connected via Phone-Phone Test</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - but need to call back</fullName>
                </value>
                <value>
                    <fullName>Yes - but preferred email communication</fullName>
                </value>
                <value>
                    <fullName>Yes - but no longer considering CommCare</fullName>
                </value>
                <value>
                    <fullName>Yes - asked to talk via Skype</fullName>
                </value>
                <value>
                    <fullName>Yes - but did not want to hear from us</fullName>
                </value>
                <value>
                    <fullName>Yes - but didn&apos;t speak same language</fullName>
                </value>
                <value>
                    <fullName>Yes - part of existing project</fullName>
                </value>
                <value>
                    <fullName>Yes - but just exploring</fullName>
                </value>
                <value>
                    <fullName>Yes - but careers</fullName>
                </value>
                <value>
                    <fullName>No - good number, but couldn&apos;t reach after 6 tries</fullName>
                </value>
                <value>
                    <fullName>No - bad number</fullName>
                </value>
                <value>
                    <fullName>No - timezone was too hard to connect</fullName>
                </value>
                <value>
                    <fullName>No - talking to co-worker or existing relationship</fullName>
                </value>
                <value>
                    <fullName>No - became ineligible or didn&apos;t mark</fullName>
                </value>
                <value>
                    <fullName>No - Dimagi Employee or Internal Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_Date_Created_in_CCHQ__c</fullName>
        <label>HubSpot - Date Created in CCHQ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_of_HQ_Sign_up_new__c</fullName>
        <label>HubSpot - Date of HQ Sign-up (new)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_of_Proactive_Call__c</fullName>
        <label>HubSpot - Date of Proactive Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_of_blog_subscription__c</fullName>
        <label>HubSpot - Date of blog subscription</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_of_first_Click_Deploy__c</fullName>
        <label>HubSpot -Date of first &quot;Click Deploy&quot;</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_of_first_HQ_form_submissi__c</fullName>
        <label>HubSpot - Date of first HQ form submissi</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_of_first_blog_visit__c</fullName>
        <label>HubSpot - Date of first blog visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_of_first_time_reaching_10__c</fullName>
        <description>HubSpot - Date of first time reaching 10 HQ forms</description>
        <inlineHelpText>HubSpot - Date of first time reaching 10 HQ forms</inlineHelpText>
        <label>HubSpot - Date reaching 10 HQ forms</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_of_inv_accepted_new_user__c</fullName>
        <description>HubSpot - Date of invitation accepted (new user)</description>
        <inlineHelpText>HubSpot - Date of invitation accepted (new user)</inlineHelpText>
        <label>HubSpot - Date of inv accepted(new user)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_of_most_recent_HQ_activit__c</fullName>
        <description>HubSpot - Date of most recent HQ activity (form builder, click deploy or new project)</description>
        <inlineHelpText>HubSpot - Date of most recent HQ activity (form builder, click deploy or new project)</inlineHelpText>
        <label>HubSpot - Date of most recent HQ activit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_reaching_100_HQ_forms__c</fullName>
        <description>HubSpot - Date of first time reaching 100 HQ forms</description>
        <inlineHelpText>HubSpot - Date of first time reaching 100 HQ forms</inlineHelpText>
        <label>HubSpot - Date reaching 100 HQ forms</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_reaching_300_HQ_forms__c</fullName>
        <description>HubSpot - Date of first time reaching 300 HQ forms</description>
        <inlineHelpText>HubSpot - Date of first time reaching 300 HQ forms</inlineHelpText>
        <label>HubSpot - Date reaching 300 HQ forms</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_reaching_50_HQ_forms__c</fullName>
        <description>HubSpot - Date of first time reaching 50 HQ forms</description>
        <inlineHelpText>HubSpot - Date of first time reaching 50 HQ forms</inlineHelpText>
        <label>HubSpot - Date reaching 50 HQ forms</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Default_HubSpot_Blog_Email_Sub__c</fullName>
        <label>HubSpot - Default HubSpot Blog Email Sub</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>instant</fullName>
                </value>
                <value>
                    <fullName>daily</fullName>
                </value>
                <value>
                    <fullName>weekly</fullName>
                </value>
                <value>
                    <fullName>monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_Eligible_for_a_proactive_call__c</fullName>
        <label>HubSpot - Eligible for a proactive call</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HubSpot_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HubSpot - Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HubSpot_Email_Subscriptions__c</fullName>
        <label>HubSpot - Email Subscriptions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Webinars</fullName>
                </value>
                <value>
                    <fullName>Blog Updates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_Email_is_generic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>&quot;Yes&quot; means a generic email address like Hotmail, yahoo, gmail, etc. 

&quot;No&quot; means a non-generic email address, as far as we can tell.</description>
        <inlineHelpText>&quot;Yes&quot; means a generic email address like Hotmail, yahoo, gmail, etc. 

&quot;No&quot; means a non-generic email address, as far as we can tell.</inlineHelpText>
        <label>HubSpot - Email is generic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HubSpot_Emails_Bounced__c</fullName>
        <description>The number of marketing emails that bounced for the current email address.</description>
        <inlineHelpText>The number of marketing emails that bounced for the current email address.</inlineHelpText>
        <label>HubSpot - Emails Bounced</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Emails_Clicked__c</fullName>
        <description>The number of marketing emails which have had link clicks for the current email address.</description>
        <inlineHelpText>The number of marketing emails which have had link clicks for the current email address.</inlineHelpText>
        <label>HubSpot - Emails Clicked</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Emails_Opened__c</fullName>
        <description>The number of marketing emails opened for the current email address.</description>
        <inlineHelpText>The number of marketing emails opened for the current email address.</inlineHelpText>
        <label>HubSpot - Emails Opened</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Had_a_proactive_call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HubSpot - Had a proactive call?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>